-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.0.3, Qt Creator 4.1.0-beta1
-
Windows 7 64 bit
Creator built with Qt 5.6.1, Qt 5.7.0
MSVC 2013
cdb 6.12
-
4b74fc4322fa889190f81b90f23538b88f6fa0aa
- Stop at a breakpoint.
- In Locals and Expressions view, right click on an object.
- Select "Open Memory Editor" -> "Open Memory Editor at Object's Address" from the context menu.
- Resize the memory editor.
All displayed values will disappear.
It should be possible to resize views and editors. On Linux or when debugging with gdb on Windows, this seems to work correctly.
For Gerrit Dashboard: QTCREATORBUG-16555 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
166709,2 | Debugger: Fix empty memory when viewing inaccessible address | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |