src/plugins/debugger/cdb/cdbengine.cpp
@@ -1518,12 +1518,16 @@ void CdbEngine::postFetchMemory(const MemoryViewCookie &cookie)
     str << cookie.address << ' ' << cookie.length;
     cmd.args = args;
     cmd.callback = [this, cookie](const DebuggerResponse &response) {
-        if (response.resultClass == ResultDone && cookie.agent) {
+        if (!cookie.agent)
+            return;
+        if (response.resultClass == ResultDone) {
             const QByteArray data = QByteArray::fromHex(response.data.data().toUtf8());
             if (unsigned(data.size()) == cookie.length)
                 cookie.agent->addLazyData(cookie.editorToken, cookie.address, data);
         } else {
             showMessage(response.data["msg"].data(), LogWarning);
+            cookie.agent->addLazyData(cookie.editorToken, cookie.address,
+                                      QByteArray (int(cookie.length), char()));
         }
     };
     runCommand(cmd);
